# Prono

./: .gitignore  CMakeLists.txt  Equipe.cpp  Equipe.h  Infos.txt  Match.cpp  README.md  perso.pro  prono.pro
include/: about.h  addleaguewidget.h  centralwidget.h  dockwidget.h  league.h  mainwindow.h  match.h  statistics.h  team.h  teamstatistics.h  treeitem.h  treemodel.h
include/model/: treeitem.h
include/widgets/: about.h  addteamwidget.h  informationwidget.h  rankingtableview.h
includes/: CMakeLists.txt
includes/BE/: Equipe.hpp  League.hpp  Ligue1.hpp  Match.hpp  Prono.hpp  README.md  Team.hpp  Variables.hpp
includes/Gui/: README.md
resources/: ressources.qrc
resources/database/: Infos.txt  Matches.txt
ressources/: Infos.txt  Matchs.txt
src/: CMakeLists.txt  about.cpp  addleaguewidget.cpp  addteamwidget.cpp  centralwidget.cpp  dockwidget.cpp  league.cpp  main.cpp  mainwindow.cpp  match.cpp  statistics.cpp  team.cpp  teamstatistics.cpp  treemodel.cpp
src/BE/: Equipe.cpp  League.cpp  Ligue1.cpp  Match.cpp  Prono.cpp  README.md  Team.cpp
src/BackEnds/: README.md
src/BackEnds/sources/: main.cpp
src/Gui/: README.md
src/includes/: Match.hpp
src/model/: treemodel.cpp
src/sources/: Ligue1.cpp
src/widgets/: about.cpp  addleaguewidget.cpp  addteamwidget.cpp  informationwidget.cpp  rankingtableview.cpp
tests/: main.cpp  matchtest.cpp  matchtest.h  teamtest.cpp  teamtest.h
